<resources>
    <string name="fb_app_id">1001370053268052</string>
    <string name="app_name">InstaCredit</string>
    <string name="rupee">₹</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook_connect">Connect With Facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registered_email">Registered Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back">Go Back</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="re_generate_otp">Re-Generate OTP</string>
    <string name="yup_its_me">Yup It\'s Me</string>
    <string name="na">NA</string>
    <string name="select_amount">Select Amount</string>
    <string name="select_tenure">Select Tenure</string>
    <string name="loan_details">Loan Details</string>
    <string name="summary">Summary</string>
    <string name="submit_loan_request">Submit Loan Request</string>
    <string name="remarks">Notes (Optional)</string>
    <string name="payment_due">Payments Due</string>
    <string name="repayments_due">Repayments Due</string>
    <string name="repayment_schedule">Repayment Schedule</string>
    <string name="installment_number">Installment No.</string>
    <string name="ref_id">Ref. ID:</string>
    
    <string name="msg_mobile_otp_main">Sit back and relax, while we verify your mobile number.</string>
    <string name="msg_mobile_otp_secondary">Enter the OTP code manually, in case we fail to detect SMS automatically.</string>
    <string name="msg_sign_up_main">Almost Done</string>
    <string name="msg_sign_up_secondary">Just check if we got your profile info correct. If not please do let us know!</string>

    <string name="screen1_title">Unlimited Calls</string>
    <string name="screen1_desc">Call your friends, family, Relatives free of cost anytime anywhere.</string>
    <string name="screen2_title">Group Conversations</string>
    <string name="screen2_desc">Create your own group and share Snapshots, Videos etc. </string>
    <string name="screen3_title">Synchronize with your laptop</string>
    <string name="screen3_desc">Get notified with your calls and messages to your laptop</string>

    <array name="money_temp">
        <item>₹500</item>
        <item>₹1000</item>
        <item>₹1500</item>
        <item>₹2000</item>
    </array>

    <array name="months_temp">
        <item>1 Month</item>
        <item>2 Month</item>
        <item>3 Month</item>
    </array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </array>

    <array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Widowed</item>
    </array>

    <array name="employment_status">
        <item>Student</item>
        <item>Unemployed</item>
        <item>Salaried</item>
        <item>Self-Employed</item>
    </array>

    <array name="residential_status">
        <item>Owned</item>
        <item>Rental</item>
        <item>Parental</item>
        <item>Temporary Sharing</item>
    </array>
    <array name="educational_degree">
        <item>Class X</item>
        <item>Class XII</item>
        <item>Under Graduation</item>
        <item>Post Graduation</item>
        <item>PhD</item>
    </array>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_lend">Lend</string>
    <string name="title_borrow">Borrow</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_transaction_history">Transaction History</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
