<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_name"
            style="@style/SplashEdditext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" />

        <View
            android:layout_width="@dimen/splash_divider_width"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_email"
            style="@style/SplashEdditext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="@dimen/splash_divider_width"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_phone"
            style="@style/SplashEdditext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:inputType="phone" />

        <View
            android:layout_width="@dimen/splash_divider_width"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/sign_up_password"
            style="@style/SplashEdditext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_main_btn"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sign_up"
            android:enabled="false"
            android:textColor="@color/colorBaseDark" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3b5998"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/facebook_connect"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>