<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/sign_in_email"
        style="@style/SplashEdditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <View
        android:layout_width="@dimen/splash_divider_width"
        android:layout_height="2dp"
        android:background="@android:color/white"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/sign_in_password"
        style="@style/SplashEdditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_main_btn"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:enabled="false"
        android:textColor="@color/colorBaseDark" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:drawableRight="@drawable/ic_help_outline_white_24dp"
        android:drawablePadding="5dp"/>

</LinearLayout>