<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/msg_mobile_otp_main"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/otp_code_edittext"
            style="@style/SplashEdditext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/otp_verfiy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_main_btn"
            android:enabled="false"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/verify"
            android:textColor="@color/colorBaseDark" />

        <TextView
            android:id="@+id/otp_regenerate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/re_generate_otp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_sms_failed_white_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="@dimen/splash_divider_footer"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/msg_mobile_otp_secondary" />

</LinearLayout>