<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/forgot_password_email"
        style="@style/SplashEdditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registered_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/recover_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_main_btn"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:text="@string/reset_password"
        android:enabled="false"
        android:textColor="@color/colorBaseDark" />

    <TextView
        android:id="@+id/forgot_password_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/go_back"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

</LinearLayout>