<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/borrow_selector_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_amount"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/borrow_amount"
                style="@style/AppSpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/money_temp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_tenure"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/borrow_teneure"
                style="@style/AppSpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/months_temp" />

            <EditText
                android:id="@+id/borrow_user_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/remarks"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/borrow_get_quote_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_white_btn"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="Get Quote"
                android:textColor="@drawable/selector_white_text_toggle" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/borrow_quote_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:translationY="500dp">

        <ListView
            android:id="@+id/borrow_repayment_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@android:color/transparent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/borrow_submit_loan_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/submit_loan_request"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>