<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        card_view:cardBackgroundColor="@color/colorBase"
        card_view:cardCornerRadius="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_amount"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                style="@style/AppSpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/money_temp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/select_tenure"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Spinner
                style="@style/AppSpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/months_temp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/remarks"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="Re-Payment Schedule"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <View
        android:layout_width="@dimen/splash_divider_footer"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorBaseDark" />

</LinearLayout>